--- a/indiancoders/styles/globals.css
+++ b/indiancoders/styles/globals.css
@@ -1,21 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&family=Ubuntu:wght@500&display=swap");
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #141e30; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #243b55,
-    #141e30
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #243b55,
-    #141e30
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: whitesmoke;
+  font-family: Oxygen, Roboto, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  background-image: #f5f5f5;
 }
 
 a {
@@ -24,5 +15,6 @@ a {
 }
 
 * {
+  font-family: "Oxygen", sans-serif;
   box-sizing: border-box;
 }
